[gd_scene load_steps=13 format=2]

[ext_resource path="res://Objects/Traps/Fire/Fire4.png" type="Texture" id=1]
[ext_resource path="res://Objects/Traps/Fire/Fire.gd" type="Script" id=2]
[ext_resource path="res://Objects/Traps/Fire/Fire3.png" type="Texture" id=3]
[ext_resource path="res://Objects/Traps/Fire/Fire2.png" type="Texture" id=4]
[ext_resource path="res://Objects/Traps/Fire/Fire1.png" type="Texture" id=5]
[ext_resource path="res://Objects/Traps/Fire/Fire6.png" type="Texture" id=6]
[ext_resource path="res://Objects/Traps/Fire/Fire5.png" type="Texture" id=7]
[ext_resource path="res://Objects/Traps/Fire/Fire7.png" type="Texture" id=8]
[ext_resource path="res://Objects/Traps/Fire/Fire8.png" type="Texture" id=9]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 5 ), ExtResource( 4 ), ExtResource( 3 ), ExtResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 8.0
}, {
"frames": [ ExtResource( 9 ), ExtResource( 8 ), ExtResource( 6 ), ExtResource( 7 ) ],
"loop": false,
"name": "free",
"speed": 16.0
}, {
"frames": [ ExtResource( 7 ), ExtResource( 6 ), ExtResource( 8 ), ExtResource( 9 ) ],
"loop": false,
"name": "spawn",
"speed": 16.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 20.0

[sub_resource type="CircleShape2D" id=3]
radius = 8.0

[node name="Fire" type="Area2D"]
collision_layer = 8
collision_mask = 6
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
z_index = -1
frames = SubResource( 1 )
animation = "spawn"
frame = 3
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="PlayerCol" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerCol"]
shape = SubResource( 3 )

[connection signal="body_entered" from="." to="." method="_on_Slime_body_entered"]
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="body_entered" from="PlayerCol" to="." method="_on_PlayerCol_body_entered"]
